old page - bug fixes

--- a/source/for_olds.html
+++ b/source/for_olds.html
@@ -60,50 +60,52 @@
     <div class="unit_2">
         <div class="left">
             <img src="../img/images/401.png">
-            <h1 class="text">
+            <h1 class="text" style="bottom: 40px;">
                 для
             </h1>
-            <h1 class="text" style="top: 105px;">
+            <h1 class="text">
                 работы
             </h1>
         </div>
         <div class="middle">
             <img src="../img/images/402.png">
-            <h1 class="text" style="top: 105px;">
+            <h1 class="text" >
                 для себя
             </h1>
         </div>
         <div class="right">
             <img src="../img/images/403.png">
-            <h1 class="text">
+            <h1 class="text" style="bottom: 40px;">
                 для
             </h1>
-            <h1 class="text" style="top: 105px;">
+            <h1 class="text">
                 путешествий
             </h1>
         </div>
     </div>
     <div class="unit_3">
-        <div class="maintext">
-            <div class="rectangle"></div>
-            <h1 class="text">У нас вы можете выучить:</h1>
-        </div>
-        <div class="languages">
-            <div class="eng">
-                <img src="../img/icons/uk.svg">
-                <h2 class="lang_text">Английский</h2>
+        <div class="unit">
+            <div class="maintext">
+                <div class="rectangle"></div>
+                <h1 class="text">У нас вы можете выучить:</h1>
             </div>
-            <div class="ger">
-                <img src="../img/icons/germany.svg">
-                <h2 class="lang_text">Немецкий</h2>
-            </div>
-            <div class="span">
-                <img src="../img/icons/spain.svg">
-                <h2 class="lang_text">Испанский</h2>
-            </div>
-            <div class="fr">
-                <img src="../img/icons/france.svg">
-                <h2 class="lang_text">Французский</h2>
+            <div class="languages">
+                <div class="eng">
+                    <img src="../img/icons/uk.svg">
+                    <h2 class="lang_text">Английский</h2>
+                </div>
+                <div class="ger">
+                    <img src="../img/icons/germany.svg">
+                    <h2 class="lang_text">Немецкий</h2>
+                </div>
+                <div class="span">
+                    <img src="../img/icons/spain.svg">
+                    <h2 class="lang_text">Испанский</h2>
+                </div>
+                <div class="fr">
+                    <img src="../img/icons/france.svg">
+                    <h2 class="lang_text">Французский</h2>
+                </div>
             </div>
         </div>
     </div>
@@ -182,7 +184,7 @@
             <h1>пакеты обучения</h1>
             <div class="rectangle"></div>
             <h2>Выбирайте удобный формат встреч</h2>
-            <img src="../img/images/410.png">
+            
         </div>
     </div>
     <div class="unit_9">
