choose for olds in progress

--- a/source/for_olds.html
+++ b/source/for_olds.html
@@ -184,7 +184,50 @@
             <h1>пакеты обучения</h1>
             <div class="rectangle"></div>
             <h2>Выбирайте удобный формат встреч</h2>
-            
+            <div class="choose">
+                <div class="rectangleCH"></div>
+                <div class="circles">
+                    <div class="circle shadow" id="firstCirc"></div>
+                    <div class="circle" id="secondCirc"></div>
+                    <div class="circle" id="thirdCirc"></div>
+                </div>
+            </div>
+            <div class="captions">
+                <h2>Вид обучения</h2>
+                <h2 style="margin: 0 11% 0 11%">Вид занятия</h2>
+                <h2>Длительность</h2>
+            </div>
+            <div class="boxes">
+                <div class="box" id="box1">
+                    <div class="line" style="margin-top: 28px;">
+                        <input type="radio" name="distance">
+                        <h3>Офлайн-занятия</h3>
+                    </div>
+                    <div class="line">
+                        <input type="radio" name="distance">
+                        <h3>Онлайн-занятия</h3>
+                    </div>                    
+                </div>
+                <div class="box" id="box2">
+                    <div class="line" style="margin-top: 25px;">
+                        <input type="radio" name="type">
+                        <h3>Индивидуальные уроки</h3>
+                    </div>
+                    <div class="line">
+                        <input type="radio" name="type">
+                        <h3>Групповые уроки</h3>
+                    </div>        
+                    <div class="line">
+                        <input type="radio" name="type">
+                        <h3>Разговорный клуб</h3>
+                    </div>                 
+                </div>
+                <div class="box" id="box3">
+                    <div class="line" style="margin-top: 37px;">
+                        <h3>60 минут</h3>
+                    </div>                   
+                </div>
+            </div>
         </div>
     </div>
     <div class="unit_9">
